--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     <a href="https://github.com/HAMZAELMANZARI" target="_blank" rel="noopener noreferrer">View Project</a>
                 </li>
                 <div class="btn-container">
-                    <a href="https://github.com/HAMZAELMANZARI" target="_blank" rel="noopener noreferrer"></a><button class="button-projects">More Projects</button>
+                    <a href="https://github.com/HAMZAELMANZARI" target="_blank" rel="noopener noreferrer"><button class="button-projects">More Projects</button>
                 </div>
-
+</a>
             </ul>
         </section>
         <section class="skills" id="skills">
