--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="CSS/main.css">
+    <script src="JS/main.js" defer></script>
 </head>
 <body>
     <div class="container">
@@ -28,12 +28,13 @@
                 I specialize in creating dynamic and responsive web applications.  
                 I have a passion for coding and love to learn new technologies.
             </p>
-            <div class="profile-pic">
+            <div id="profile-image" class="profile-pic">
                 <img src="img/myimg.png" alt="Profile Picture" class="profile-image">
             </div>
-            <div class="link-social">
-                <a href="https://www.linkedin.com/in/hamza-el-manzari" target="_blank">LinkedIn</a>
-                <a href="https://github.com/hamza-el-manzari" target="_blank">GitHub</a>
+            <div id="social-links" class="link-social">
+                <a href="https://hamzaelmanzari.github.io/Single-Page-CV/" target="_blank" rel="noopener">CV</a>
+                <a href="https://www.linkedin.com/in/hamza-el-manzari" target="_blank" rel="noopener">LinkedIn</a>
+                <a href="https://github.com/hamza-el-manzari" target="_blank" rel="noopener">GitHub</a>
             </div>
         </section>
         <section id="projects">
